[tool.poetry]
name = "pylock"
version = "0.4.1"
description = "Distributed lock implementation based on memcache and redis"
authors = ["Wave Developer Ops <devops@waveapps.com>"]

[[tool.poetry.source]]
name = "gemfury"
url = "https://pypi.fury.io/wave/"

[tool.poetry.dependencies]
python = ">=3.7"
redis = ">=4.0"
nose = "^1.3.7"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
ipdb = "*"
pytest = "*"

